@@ -1,3 +1,9 @@
+2016-11-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Mscripts_qsystem/q2_version.m: Verion now set to qsmr-beta-6. 
+
+	* Mscripts_arts/q2_inv.m (subfun4l2): Changed back to VMR/VMR AVKs.
+
 2016-11-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Mscripts_database/l1b_homemade.m: Made clear in header that LOG
